force-app/main/default/objects/Application_Impact__c/Application_Impact__c.object-meta.xml
<CustomObject>
    <description>The economic effect an investment has on a community.</description>
    <label>Application Impact</label>
    <nameField>
        <displayFormat>IMP-{000000}</displayFormat>
        <label>Application Impact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Impacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>