force-app/main/default/objects/Application_Impact__c/fields/Completion_Task__c.field-meta.xml
<CustomField>
    <fullName>Completion_Task__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Completion Task</label>
    <type>Checkbox</type>
</CustomField>