force-app/main/default/objects/Application_Impact__c/fields/Number_of_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Jobs__c</fullName>
    <label>Number of Jobs</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>