force-app/main/default/objects/Application_Impact__c/validationRules/Number_of_Jobs.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_of_Jobs</fullName>
    <active>true</active>
    <errorConditionFormula>Number_of_Jobs__c &lt;=0</errorConditionFormula>
    <errorDisplayField>Number_of_Jobs__c</errorDisplayField>
    <errorMessage>The number of jobs must be positive</errorMessage>
</ValidationRule>